--- a/login.html
+++ b/login.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>login</title>
 </head>
 <body>
-  <section>
-    
-  </section>
+    <section>
+        <h1>나의 운동 일지</h1>
+        <h2>로그인</h2>
+        <form action="" method="get">
+            <input type="text" placeholder="아이디를 입력하세요" minlength="5" maxlength="13" value="" />
+            <input type="password" placeholder="비밀번호를 입력하세요" minlength="6"/>
+            <button>로그인</button>
+            <button>회원가입</button>
+          </form>
+    </section>
 </body>
 </html>
