--- a/login.html
+++ b/login.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
+    <header>
+        <img src="./assets/belly-g5dad91a63_1920.jpg">
+    </header>
     <section>
         <h1>나의 운동 일지</h1>
         <h2>로그인</h2>
         <form action="" method="get">
             <input type="text" placeholder="아이디를 입력하세요" minlength="5" maxlength="13" value="" />
             <input type="password" placeholder="비밀번호를 입력하세요" minlength="6"/>
-            <button>로그인</button>
-            <button>회원가입</button>
+            <a href="" class="login_button">로그인</a>
+            <a href="">회원가입</a>
           </form>
     </section>
 </body>
