회원가입 페이지 생성

--- a/sign up.html
+++ b/sign up.html
@@ -2,9 +2,94 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:title" content="프로필을 만들자!"/>
+    <meta property="og:description" content="자신을 어필해보세요!"/>
+    <meta property="og:image" content="http://newsroom.etomato.com/userfiles/dsbgds.jpg"/>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
+    <title>회원가입!</title>
+    <style>
+        .wrap {
+            background-color: transparent;
+
+            width: 400px;
+            margin: 100px auto;
+
+            text-align: center;
+
+            box-shadow: 0px 0px 5px gray;
+
+            padding: 20px;
+        }
+        .mytitle {
+            margin-bottom: 20px;
+        }
+    </style>
+    <script type="text/javascript">
+        function test() {
+            var p1 = document.getElementById('password1').value;
+            var p2 = document.getElementById('password2').value;
+            if (p1 != p2) {
+                alert("비밀번호가 일치 하지 않습니다.")
+                return false;
+            }else if (p1 == '') {
+                alert("비밀번호를 입력하세요.")
+                return true;
+            }else {
+                alert("비밀번호가 일치합니다.")
+                return true;
+            }
+        }
+
+        function id_overlap_check() {
+
+          $('.username_input').change(function () {
+            $('#id_check_sucess').hide();
+            $('.id_overlap_button').show();
+            $('.username_input').attr("check_result", "fail");
+          })
+          if ($('.username_input').val() == '') {
+            alert('이메일을 입력해주세요.')
+            return;
+          }
+        }
+
+
+    </script>
+</head>
+
+<body>
+    <div class="wrap">
+        <div class="mytitle">
+            <h1>회원가입</h1>
+        </div>
+
+        <div class="myidpw">
+            <p><input type="text" placeholder="이름"></p>
+            <p><input type="text"></p>
+
+          <p><input type="text" class="username_input" name="username" check_result="fail" required/>
+            <button type="button" class="id_overlap_button" onclick="id_overlap_check()">중복검사</button>
+            <img id="id_check_sucess" style="display: none;"></p>
+
+            <p><input type="password" id="password1" placeholder="비밀번호"></p>
+            <p><input type="password" id="password2" placeholder="비밀번호확인"></p>
+
+            <div class="mypw">
+                <input type="button" onclick="test()" value="회원가입">
+                <input type="button" onclick="cancel()" value="취소">
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
