--- a/login.html
+++ b/login.html
@@ -5,19 +5,33 @@
     <title>login</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="js/login.js">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <img src="./assets/belly-g5dad91a63_1920.jpg">
+        <h1>나의 운동 일지</h1>
+<!--        <div class="log_img"></div>-->
     </header>
     <section>
-        <h1>나의 운동 일지</h1>
         <h2>로그인</h2>
-        <form action="" method="get">
-            <input type="text" placeholder="아이디를 입력하세요" minlength="5" maxlength="13" value="" />
-            <input type="password" placeholder="비밀번호를 입력하세요" minlength="6"/>
-            <a href="" class="login_button">로그인</a>
-            <a href="">회원가입</a>
+        <form name="login" action="" method="get">
+            <div class="user_id">
+                <input type="text" name="id" placeholder="아이디를 입력하세요" minlength="5" maxlength="13" value="" />
+            </div>
+            <div class="user_password">
+                <input type="password" name="password" placeholder="비밀번호를 입력하세요" minlength="6"/>
+            </div>
+
+            <div class="button">
+                <input class="login_button" type="button" onclick="check(this.form)" value="로그인"/>
+                <input type="button" onclick="check(this.form)" value="회원가입"/>
+            </div>
           </form>
 
     </section>
